Bug 507497 - Amarok crashes on startup after latest upgrade (3.3.0)
Summary: Amarok crashes on startup after latest upgrade (3.3.0)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 3.3.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
: 510313 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-25 23:04 UTC by pieter.terpstra
Modified: 2025-10-07 04:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Attachment is result from `amarok -debug` command (27.04 KB, text/x-log)
2025-07-25 23:04 UTC, pieter.terpstra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pieter.terpstra 2025-07-25 23:04:14 UTC
Created attachment 183521 [details]
Attachment is result from `amarok -debug`  command

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Amarok Crashes on startup

STEPS TO REPRODUCE
1. start amarok
2. 
3. 

OBSERVED RESULT
Amarok crashes

EXPECTED RESULT
Amarok opens

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 6.4.3
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Platform X11
Attachment is result from `amarok -debug`  command
Comment 1 Tuomas Nurmi 2025-07-27 08:50:09 UTC
Thank you for the report!
There's not quite enough information there yet to find out the specific cause of the crash, however.
Could you try to get a backtrace of the crash and paste it here? (e.g. by running ´gdb amarok´, ´run´, ´backtrace´; more detailed guidelines available at https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_with_GDB )
Comment 2 pieter.terpstra 2025-07-29 18:07:56 UTC
(gdb) backtrace
#0  QNetworkInformation::reachability (this=0x0)
    at /usr/src/debug/qtbase-everywhere-src-6.9.1/src/network/kernel/qnetworkinformation.cpp:554
#1  0x00007ffff75922fd in PodcastImageFetcher::run (this=0x55555623d700)
    at /usr/src/debug/amarok-3.3.0/src/core/podcasts/PodcastImageFetcher.cpp:113
#2  0x00007ffff7a3bf17 in Podcasts::SqlPodcastProvider::loadPodcasts (this=0x555556065230)
    at /usr/src/debug/amarok-3.3.0/src/core-impl/podcasts/sql/SqlPodcastProvider.cpp:192
#3  0x00007ffff7a3cd42 in Podcasts::SqlPodcastProvider::SqlPodcastProvider (this=<optimized out>, 
    this=<optimized out>)
    at /usr/src/debug/amarok-3.3.0/src/core-impl/podcasts/sql/SqlPodcastProvider.cpp:121
#4  0x00007ffff7b8eec4 in PlaylistManager::PlaylistManager (this=<optimized out>, 
    this=<optimized out>) at /usr/src/debug/amarok-3.3.0/src/playlistmanager/PlaylistManager.cpp:78
#5  0x00007ffff7b8ef6b in PlaylistManager::instance ()
    at /usr/src/debug/amarok-3.3.0/src/playlistmanager/PlaylistManager.cpp:57
#6  PlaylistManager::instance ()
    at /usr/src/debug/amarok-3.3.0/src/playlistmanager/PlaylistManager.cpp:55
#7  0x00007ffff7991516 in Playlist::Actions::restoreDefaultPlaylist (this=this@entry=0x555555e765e0)
    at /usr/src/debug/amarok-3.3.0/src/playlist/PlaylistActions.cpp:529
#8  0x00007ffff799195c in Playlist::Actions::init (this=0x555555e765e0, this@entry=0x5555561aa4e0)
    at /usr/src/debug/amarok-3.3.0/src/playlist/PlaylistActions.cpp:97
#9  0x00007ffff79919a2 in Playlist::Actions::instance ()
    at /usr/src/debug/amarok-3.3.0/src/playlist/PlaylistActions.cpp:58
#10 0x00007ffff7c65f8e in MainWindow::createActions (this=0x555555e765e0)
    at /usr/src/debug/amarok-3.3.0/src/MainWindow.cpp:742
--Type <RET> for more, q to quit, c to continue without paging--
#11 0x00007ffff7c61232 in MainWindow::MainWindow (this=<optimized out>, this=<optimized out>)
    at /usr/src/debug/amarok-3.3.0/src/MainWindow.cpp:150
#12 0x00007ffff7c4b1dc in App::continueInit (this=this@entry=0x7fffffffd890)
    at /usr/src/debug/amarok-3.3.0/src/App.cpp:466
#13 0x000055555555eeb2 in main (argc=<optimized out>, argv=<optimized out>)
    at /usr/src/debug/amarok-3.3.0/src/main.cpp:347
(gdb)
Comment 3 Tuomas Nurmi 2025-07-29 18:14:29 UTC
Good, thank you very much! I suspect this is a symptom of something that I've already fixed in git: https://invent.kde.org/multimedia/amarok/-/commit/041dc8525a5d7678e8568c76380641f32f499314 (and will ship in 3.3.1)

Could you check your amarokrc file at ~/.config/amarokrc
and see if you find a section
[File Browser]

and from there a value
Current Directory=some path/url

What path is there saved? Is it some remote url? What happens if you delete the whole line containing "Current Directory", save the amarokrc file and try starting amarok?
Comment 4 pieter.terpstra 2025-08-02 00:52:23 UTC
Amarok also crashes when that line in ~/.config/amarokrc is removed.

Was:
Current Directory=/local/user/Music
Comment 5 Tuomas Nurmi 2025-08-02 08:03:00 UTC
Okay, so it's something different. Thank you very much for testing! I'll try to come up with a solution.
Comment 6 pieter.terpstra 2025-08-02 16:11:29 UTC
But for sure its in the  ~/.config/amarokrc
Amarok starts up after removing it.
Have a great day!
Comment 7 Tuomas Nurmi 2025-08-02 16:48:54 UTC
Okay, great to hear you got everything working!
I also did some edits that probably would have fixed it. Merging them so nobody else will hopefully hit the same bug.
Comment 8 Tuomas Nurmi 2025-08-02 16:49:22 UTC
Git commit d84b4614668db2ec4b11d9d97d3365b56c4c3402 by Tuomas Nurmi.
Committed on 02/08/2025 at 16:49.
Pushed by nurmi into branch 'master'.

Load QNetworkInformation earlier to prevent crashes

Gpodder, podcast or some other service trying to check reachability before
network info is loaded causes crashes. Make sure QNetworkInformation is readied
at very early phase.

M  +1    -0    ChangeLog
M  +2    -2    src/App.cpp

https://invent.kde.org/multimedia/amarok/-/commit/d84b4614668db2ec4b11d9d97d3365b56c4c3402
Comment 9 Tuomas Nurmi 2025-10-07 04:37:53 UTC
*** Bug 510313 has been marked as a duplicate of this bug. ***