Load QNetworkInformation earlier to prevent crashes

Gpodder, podcast or some other service trying to check reachability before
network info is loaded causes crashes. Make sure QNetworkInformation is readied
at very early phase.

BUG: 507497